make fix it link more visible

--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,10 @@
     * {
         vertical-align: middle;
     }
+
+    a.fix-it {
+        text-decoration: underline;
+    }
 }
 
 .twitter-share-button {
